Fixed bugs on IE

--- a/src/scss/components/icon.scss
+++ b/src/scss/components/icon.scss
@@ -11,7 +11,7 @@
     cursor: pointer;
     line-height: 1;
 
-    min-height: auto;
+    min-height: 20px;
     width: auto;
 
     &,
